--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "config": "^3.3.1",
     "instagram-scraping": "^1.0.13",
-    "node-telegram-bot-api": "^0.40.0"
+    "node-telegram-bot-api": "^0.40.0",
+    "scrape-twitter": "^0.11.1"
   }
 }
