--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "config": "^3.3.1",
     "instagram-scraping": "^1.0.13",
     "node-telegram-bot-api": "^0.40.0",
-    "scrape-twitter": "^0.11.1"
+    "scrape-twitter": "^0.11.1",
+    "yargs": "^15.3.1"
   }
 }
