--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
     "instagram-scraping": "^1.0.13",
+    "morgan": "^1.10.0",
     "node-telegram-bot-api": "^0.50.0",
     "twit": "^2.2.11",
     "twitter": "^1.7.1"
